# rigremote

./: .gitignore  README.md  config.sample.yaml  editor.py  editor.service  fakerig.py  freq.sh  hamlibrig.py  mode.sh  ptt.sh  radio_loader.py  remoteserver.py  requirements.txt  rigctld@.service  schedule.sample.csv  svxlink-echolink-chat.py  svxlink-echolink-hamlib-bot.py  svxlink-hamlib-bridge.py  transmitter.py  transmitter.service  tx.sh
old/: azimuty.html  editor.py  editor.service  fakerig.py  remoteserver.py  remoteserver.sample.yaml  schedule.sample.csv  svxlink-hamlib-bridge.sample.yaml  transmitter.py  transmitter.service
old/static/editor/css/: style.css
old/static/remote/js/: app.js
old/templates/editor/: edit_schedule.html
old/templates/remote/: index.html
rig-web/: CLAUDE.md  README.md  app.py  pyproject.toml  requirements.txt  test_config.py  test_radio_id_generation.py  test_radio_loading.py
rig-web/config/: settings.example.toml
rig-web/config/plugins/scheduled_transmitter/: plugin.toml  plugin.toml.backup.20250921_222439  plugin.toml.backup.20250921_222449  rig1.toml
rig-web/core/: config.py  events.py  registry.py  utils.py
rig-web/core/interfaces/: __init__.py  plugin_module.py  radio_driver.py
rig-web/plugins/: scheduledtransmitter.py
rig-web/plugins/scheduled_transmitter/: __init__.py  daemon.py
rig-web/plugins/scheduled_transmitter/templates/: main.html
rig-web/radios/: fakeradio.py  hamlibnetradio.py
rig-web/systemd/: plugin@.service
rig-web/web/: api.py  config_api.py  ws.py
rig-web/web/ui/static/: app.js  style.css
rig-web/web/ui/templates/: index.html
static/: style.css
static/remote/css/: style.css
static/remote/js/: app.js
templates/: audio_files.html  create_folder.html  edit_schedule.html  index.html
templates/editor/: audio_files.html  create_folder.html  index.html
templates/remote/: index.html
